# akushon

./: CMakeLists.txt  LICENSE  README.md  package-lock.json  package.xml
.github/workflows/: Akushon_ci.yml  akushon_ci.yml  build-and-test-nightly.yml  build-and-test-stable.yml  build-debian-nightly.yml  build-debian-stable.yml  build-ros2-ws-action.yml
data/action/: left_kick.json  right_kick.json  sit_down.json  walk_ready.json  walkready.json
data/action/test/action/: right_kick.json
data/test/action/: right_kick.json
data_examples/: right_kick.json
include/akushon/: action.hpp  action_manager.hpp  akushon.hpp  motion.hpp  pose.hpp
include/akushon/action/: action.hpp
include/akushon/action/model/: action.hpp  action_name.hpp  pose.hpp
include/akushon/action/node/: action_manager.hpp  action_node.hpp
include/akushon/action/process/: interpolator.hpp  joint_process.hpp  moveit.hpp
include/akushon/config/: config.hpp
include/akushon/config/grpc/: call_data.hpp  call_data_base.hpp  call_data_brake_action.hpp  call_data_get_config.hpp  call_data_load_config.hpp  call_data_publish_set_joints.hpp  call_data_publish_set_torques.hpp  call_data_run_action.hpp  call_data_save_config.hpp  call_data_subscribe_current_joints.hpp  config.hpp
include/akushon/config/node/: config_node.hpp
include/akushon/config/utils/: config.hpp  config_util.hpp
include/akushon/node/: akushon_node.hpp
launch/: akushon_launch.py
src/: action_main.cpp  action_manager_main.cpp  action_manager_simulation_main.cpp  akushon_main.cpp  interpolator.cpp  interpolator_main.cpp  main.cpp  right_kick.json
src/akushon/: action.cpp  action_manager.cpp  motion.cpp  pose.cpp
src/akushon/action/model/: action.cpp  action_name.cpp  pose.cpp
src/akushon/action/node/: action_manager.cpp  action_node.cpp
src/akushon/action/process/: interpolator.cpp  joint_process.cpp  moveit.cpp
src/akushon/config/grpc/: call_data.cpp  call_data_base.cpp  call_data_brake_action.cpp  call_data_get_config.cpp  call_data_load_config.cpp  call_data_publish_set_joints.cpp  call_data_publish_set_torques.cpp  call_data_run_action.cpp  call_data_save_config.cpp  call_data_subscribe_current_joints.cpp  config.cpp
src/akushon/config/node/: config_node.cpp
src/akushon/config/utils/: config.cpp  config_util.cpp
src/akushon/node/: akushon_node.cpp
test/action/: action_test.cpp  interpolator_test.cpp  pose_test.cpp
test/node/: akushon_node_test.cpp
